[package]
name = "neon-bindings"
version = "0.1.0"
authors = ["daose <bychen@edu.uwaterloo.ca>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
rust_electron = { path = "../../" }
